--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -43,17 +43,17 @@ body {
 .product-grid {
     display:flex;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     align-items: center;
     justify-content: center;
 }
 .product-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 50px;
+    gap: 20px;
     /* background-color: pink; */
     /* justify-content: space-between; */
-    padding: 20px;
+    padding: 10px;
     width: 100%;
     align-items: center;
     justify-content: center;
@@ -94,7 +94,8 @@ body {
 
 .product-image {
     max-width: 100%;
-    height: 200px; /* Adjust height for better consistency */
+   height: auto;
+    max-height: 180px;
 }
 
 .product-button {
@@ -179,7 +180,7 @@ body {
     /* background-color: yellow; */
 }
 .plant_heading{
-    width: 400px;
+    width: 90%;
     text-align: center;
     margin: 20px;
     border: 1px solid rgb(5, 4, 4);
